--- a/smilecook/Views/MainPage.xaml
+++ b/smilecook/Views/MainPage.xaml
@@ -99,14 +99,26 @@
                             </Border.GestureRecognizers>
                             
                             <Grid ColumnDefinitions="Auto, *"
-                              RowDefinitions="*" 
+                              RowDefinitions="*,Auto" 
                               ColumnSpacing="10">
                                 <Image Style="{StaticResource ThumbnailImage}"
                                    Grid.Column="0"
+                                   Grid.RowSpan="2"
                                    Source="{Binding Image}" />
                                 <Label Text="{Binding Label}"
                                    Style="{StaticResource CardTitle}" 
                                    Grid.Column="1"/>
+
+                                <Grid Grid.Column="1" Grid.Row="1" ColumnDefinitions="Auto, Auto" ColumnSpacing="15" Padding="0,0,10,0">
+                                    <HorizontalStackLayout Grid.Column="0" Style="{StaticResource IconLabelContainer}" >
+                                        <Image Source="energy.png" Style="{StaticResource Icon}"/>
+                                        <Label Text="{Binding Calories, StringFormat='{0:.} kcal'}" Style="{StaticResource IconLabel}"/>
+                                    </HorizontalStackLayout>
+                                    <HorizontalStackLayout Grid.Column="1" Style="{StaticResource IconLabelContainer}">
+                                        <Image Source="clock.png" Style="{StaticResource Icon}"/>
+                                        <Label Text="{Binding TotalTime, StringFormat='{0} min'}" Style="{StaticResource IconLabel}"/>
+                                    </HorizontalStackLayout>
+                                </Grid>
                             </Grid>
                         </Border>
 
