--- a/smilecook/Views/ShoppingListPage.xaml
+++ b/smilecook/Views/ShoppingListPage.xaml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:model="clr-namespace:smilecook.Models"
+             xmlns:viewmodel="clr-namespace:smilecook.ViewModels"
+             x:DataType="viewmodel:ShoppingListViewModel"
              x:Class="smilecook.Views.ShoppingListPage"
              Title="ShoppingListPage">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Label Text="Shopping List" Style="{StaticResource Title}" />
+        <CollectionView ItemsSource="{Binding ShoppingList}"
+                        SelectionMode="None">
+
+            <CollectionView.EmptyView>
+                <StackLayout>
+                    <Label Text="You haven't added any items to your shopping list." />
+                </StackLayout>
+            </CollectionView.EmptyView>
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="model:ShoppingList">
+                    <Label Text="{Binding Ingredient}" />
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+
+        </CollectionView>
     </VerticalStackLayout>
 </ContentPage>
