Controlling visibility of Add to favourites and Delete from favourites buttons

--- a/smilecook/Views/RecipeDetailPage.xaml
+++ b/smilecook/Views/RecipeDetailPage.xaml
@@ -8,12 +8,10 @@
     <!--Shell.NavBarIsVisible="False"-->
     <ScrollView Style="{StaticResource MainLayout}">
         <VerticalStackLayout>
-            <Button Text="Add to Favourites" Command="{Binding AddToFavouritesCommand}"/>
+            <Button Text="Add to Favourites" Command="{Binding AddToFavouritesCommand}" IsVisible="{Binding AddButtonVisible}"/>
             <Button Text="Delete from Favourites" 
                     Command="{Binding DeleteFromFavouritesCommand}"
-                    CommandParameter="{Binding Recipe.Url}"/>
-            <Image Source="star.svg" IsVisible="{Binding Recipe.IsFavourite}" />
-
+                    CommandParameter="{Binding Recipe.Url}" IsVisible="{Binding DeleteButtonVisible}"/>
             <Grid ColumnDefinitions="*"
                   RowDefinitions="*, Auto, 40">
 
