Favourites button styles added

--- a/smilecook/Views/RecipeDetailPage.xaml
+++ b/smilecook/Views/RecipeDetailPage.xaml
@@ -8,8 +8,8 @@
     <!--Shell.NavBarIsVisible="False"-->
     <ScrollView Style="{StaticResource MainLayout}">
         <VerticalStackLayout>
-            <Button Text="Add to Favourites" Command="{Binding AddToFavouritesCommand}" IsVisible="{Binding AddButtonVisible}"/>
-            <Button Text="Delete from Favourites" 
+            <Button Text="Add to Favourites"  ImageSource="star_white.svg" Command="{Binding AddToFavouritesCommand}" IsVisible="{Binding AddButtonVisible}"/>
+            <Button Text="Delete from Favourites" ImageSource="star_filled_white.svg"
                     Command="{Binding DeleteFromFavouritesCommand}"
                     CommandParameter="{Binding Recipe.Url}" IsVisible="{Binding DeleteButtonVisible}"/>
             <Grid ColumnDefinitions="*"
