--- a/smilecook/App.xaml
+++ b/smilecook/App.xaml
@@ -49,13 +49,21 @@
             <Style x:Key="CheckboxLabel" TargetType="Label">
                 <Setter Property="VerticalOptions" Value="Center"/>
             </Style>
-            
+
             <Style x:Key="Link" TargetType="Button">
                 <Setter Property="Background" Value="transparent"/>
                 <Setter Property="TextColor" Value="black"/>
                 <Setter Property="FontSize" Value="15"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="HorizontalOptions" Value="Start"/>
+            </Style>
+
+            <Style x:Key="FavouritesButton" TargetType="Button">
+                <Setter Property="HeightRequest" Value="50"/>
+                <Setter Property="WidthRequest" Value="50"/>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="HorizontalOptions" Value="End"/>
+                <Setter Property="VerticalOptions" Value="Start"/>
             </Style>
             <Style x:Key="RecipeTitle" TargetType="Label">
                 <Setter Property="FontSize" Value="15"/>
