--- a/smilecook/Views/RecipeDetailPage.xaml
+++ b/smilecook/Views/RecipeDetailPage.xaml
@@ -8,16 +8,26 @@
     <!--Shell.NavBarIsVisible="False"-->
     <ScrollView Style="{StaticResource MainLayout}">
         <VerticalStackLayout>
-            <Button Text="Add to Favourites"  ImageSource="star_white.svg" Command="{Binding AddToFavouritesCommand}" IsVisible="{Binding AddButtonVisible}"/>
-            <Button Text="Delete from Favourites" ImageSource="star_filled_white.svg"
-                    Command="{Binding DeleteFromFavouritesCommand}"
-                    CommandParameter="{Binding Recipe.Url}" IsVisible="{Binding DeleteButtonVisible}"/>
             <Grid ColumnDefinitions="*"
                   RowDefinitions="*, Auto, 40">
 
                 <Image Source="{Binding Recipe.Image}" 
                         Grid.RowSpan="2"/>
 
+                <ImageButton Grid.Row="0"
+                        Grid.Column="0" 
+                        Style="{StaticResource FavouritesButton}"
+                        Source="star_white.svg" 
+                        Command="{Binding AddToFavouritesCommand}" 
+                        IsVisible="{Binding AddButtonVisible}"/>
+                <ImageButton Grid.Row="0"
+                        Grid.Column="0" 
+                        Style="{StaticResource FavouritesButton}"
+                        Source="star_filled_white.svg"
+                        Command="{Binding DeleteFromFavouritesCommand}"
+                        CommandParameter="{Binding Recipe.Url}" 
+                        IsVisible="{Binding DeleteButtonVisible}"/>
+                
                 <Border Style="{StaticResource TitleBorder}" 
                         Grid.RowSpan="2"
                         Grid.Row="1"
