--- a/smilecook/Views/FavouritesPage.xaml
+++ b/smilecook/Views/FavouritesPage.xaml
@@ -20,29 +20,30 @@
                     </CollectionView.EmptyView>
 
                     <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:Favourite">
+                        <DataTemplate x:DataType="model:Favourite">
 
-                        <Border Style="{StaticResource RecipeCard}">
+                            <Border Style="{StaticResource RecipeCard}">
 
                             <Border.GestureRecognizers>
-                                <TapGestureRecognizer />
+                                <TapGestureRecognizer CommandParameter="{Binding .}"
+                                                      Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:FavouritesViewModel}}, Path=GoToRecipeDetailCommand}"/>
                             </Border.GestureRecognizers>
 
                             <Grid ColumnDefinitions="Auto, *"
-                              RowDefinitions="*,Auto" 
-                              ColumnSpacing="10">
-                                <Image Style="{StaticResource ThumbnailImage}"
-                                   Grid.Column="0"
-                                   Grid.RowSpan="2"
-                                   Source="{Binding Image}" />
-                                <Label Text="{Binding Label}"
-                                   Style="{StaticResource CardTitle}" 
-                                   Grid.Column="1"/>
+                                  RowDefinitions="*,Auto" 
+                                  ColumnSpacing="10">
+                                    <Image Style="{StaticResource ThumbnailImage}"
+                                       Grid.Column="0"
+                                       Grid.RowSpan="2"
+                                       Source="{Binding Image}" />
+                                    <Label Text="{Binding Label}"
+                                       Style="{StaticResource CardTitle}" 
+                                       Grid.Column="1"/>
 
 
-                            </Grid>
-                        </Border>
-                    </DataTemplate>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
                     </CollectionView.ItemTemplate>
 
                 </CollectionView>
