--- a/smilecook/Views/AddRecipeFormPage.xaml
+++ b/smilecook/Views/AddRecipeFormPage.xaml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="smilecook.Views.AddRecipeFormPage"
-             Title="AddRecipeFormPage">
-    <VerticalStackLayout>
+             x:Class="smilecook.Views.AddRecipeFormPage">
+    <VerticalStackLayout Style="{StaticResource MainLayout}">
         <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            Text="New Recipe"
+            Style="{StaticResource Title}"/>
+        
+        <Border Style="{StaticResource RecipeCard}" >
+            <Entry Placeholder="Enter recipe title" ClearButtonVisibility="WhileEditing" />
+        </Border>
+        
+        <Border Style="{StaticResource RecipeCard}" >
+            <Editor Placeholder="Enter instructions" HeightRequest="200" />
+        </Border>
+        
     </VerticalStackLayout>
 </ContentPage>
